lustre/mdd/mdd_object.c
@@ -1489,13 +1489,18 @@ static int mdd_swap_layouts(const struct lu_env *env, struct md_object *obj1,
 	if (rc != 0)
 		GOTO(stop, rc);
 
-	if (fst_buf->lb_buf != NULL)
-		rc = mdo_xattr_set(env, snd_o, fst_buf, XATTR_NAME_LOV,
-				   LU_XATTR_REPLACE, handle,
-				   mdd_object_capa(env, snd_o));
-	else
-		rc = mdo_xattr_del(env, snd_o, XATTR_NAME_LOV, handle,
-				   mdd_object_capa(env, snd_o));
+	if (unlikely(OBD_FAIL_CHECK(OBD_FAIL_MDS_HSM_SWAP_LAYOUTS))) {
+		rc = -EOPNOTSUPP;
+	} else {
+		if (fst_buf->lb_buf != NULL)
+			rc = mdo_xattr_set(env, snd_o, fst_buf, XATTR_NAME_LOV,
+					   LU_XATTR_REPLACE, handle,
+					   mdd_object_capa(env, snd_o));
+		else
+			rc = mdo_xattr_del(env, snd_o, XATTR_NAME_LOV, handle,
+					   mdd_object_capa(env, snd_o));
+	}
+
 	if (rc != 0) {
 		int steps = 0;
 
@@ -2024,7 +2029,6 @@ static int mdd_object_lock(const struct lu_env *env,
 			   void *policy)
 {
 	struct mdd_object *mdd_obj = md2mdd_obj(obj);
-	LASSERT(mdd_object_exists(mdd_obj));
 	return dt_object_lock(env, mdd_object_child(mdd_obj), lh,
 			      einfo, policy);
 }
